--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd server && nodemon index.js"
+    "server": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
